Integrated functionality to get winners from the CS2 server session and writing transaction to it.
