# inbound-controller-ws/src/main/java/org/windat/ws/security/SecurityConfig.java
@@ -28,6 +28,8 @@ class SecurityConfig {
     private void configureAuthorizationRules(AuthorizeHttpRequestsConfigurer<HttpSecurity>.AuthorizationManagerRequestMatcherRegistry auth) {
         auth
                 .requestMatchers(HttpMethod.POST, "/users").permitAll()
+                .requestMatchers(HttpMethod.POST, "/duel-results").permitAll()
+                .requestMatchers(HttpMethod.GET, "/users/leaderboard").permitAll()
                 .requestMatchers(EndpointRequest.toAnyEndpoint()).permitAll()
                 .anyRequest().authenticated();
     }
